Committed changes related to Home page image, and Heading style
Added image to the home page and changed the header style to look more
appealing

--- a/D_Man/WebContent/HomePage.html
+++ b/D_Man/WebContent/HomePage.html
@@ -30,9 +30,9 @@
 </ul>
 </nav>
 <div align="center" ng-show="isHome">
-<p><b>Welcome to Data Management</b></p>
-<p><b> Easy way to add purchase order, Quotation, Inventory Details and Sales details</b></p>
+<img ng-src="images/business.jpg" alt="Mountain View" style="width:1400px;height:500px;" >
 </div>
+
 <div ng-show="isPurchase" align="left">
 <br>
 <center><h2>Purchase Order</h2></center>
