--- a/D_Man/WebContent/Menu.html
+++ b/D_Man/WebContent/Menu.html
@@ -11,7 +11,15 @@
 			<a href="#" ng-click="showVendors()">Vendors</a>
 	 </div>
   </li>
- <li><a class="{{styleClassS}}" href="#" ng-click="showSales()">Sales</a></li>
+ <li class="dropdown"><a href="#" class="dropbtn">Sales &raquo;</a>
+	  <div class="dropdown-content">
+			<a href="#" ng-click="showEnquiry()">Customer Enquiry</a>
+			<a href="#" ng-click="showQuotation()">Generate Quotation</a>
+			<a href="#" ng-click="showPurchaseOrder()">Save Purchase Order</a>
+			<a href="#" ng-click="showIDC()">Outward Delivery Challan</a>
+			<a href="#" ng-click="showItemMaster()">Customer Master</a>
+	 </div>
+ </li>
   <li style="float:right;list-style-type:none;"><a href="#">Login</a></li>
   <li style="float:right;list-style-type:none;"><a href="#">About</a></li>
 </ul>
